# docs/swagger.json
@@ -83,8 +83,8 @@
                 ],
                 "summary": "Create user account based on email or 0x address.",
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/internal_controller.UserResponse"
                         }
